stop cutting off tooltip boxes by not hiding overflow of card elements

--- a/src/jsMain/resources/style.css
+++ b/src/jsMain/resources/style.css
@@ -129,7 +129,6 @@ button:hover {
     background: var(--content-back);
     height: fit-content;
     max-width: 100%;
-    overflow: hidden;
     gap: 1rem;
 }
 
